# can-viewer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  LICENSING.md  README.md  build.rs  eslint.config.js  index.html  package-lock.json  package.json  setup-git-hooks.sh  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
capabilities/: default.json
examples/: README.md
frontend/: index.html
frontend/lib/: can-viewer.test.ts  can-viewer.ts  config.test.ts  config.ts  events.ts  formatters.test.ts  formatters.ts  index.ts  mock-api.ts  renderers.test.ts  renderers.ts  state.test.ts  state.ts  store.ts  tauri-api.test.ts  tauri-api.ts  template.ts  types.ts
frontend/lib/api/: index.ts  mock-api.ts  tauri-api.test.ts  tauri-api.ts
frontend/lib/components/: capture-controls.test.ts  capture-controls.ts  dbc-viewer.test.ts  dbc-viewer.ts  filters-panel.test.ts  filters-panel.ts  frames-table.test.ts  frames-table.ts  index.ts  signals-panel.test.ts  signals-panel.ts
frontend/lib/components/dbc-editor/: dbc-editor.ts  index.ts  message-editor.ts  messages-list.ts  nodes-editor.ts  shared-styles.ts  signal-editor.ts  signals-table.ts  types.ts  utils.ts
frontend/lib/components/live-viewer/: index.ts  live-viewer.ts
frontend/lib/components/mdf4-inspector/: index.ts  mdf4-inspector.ts
frontend/lib/components/shared/: capture-controls.test.ts  capture-controls.ts  dbc-viewer.test.ts  dbc-viewer.ts  filters-panel.test.ts  filters-panel.ts  frames-table.test.ts  frames-table.ts  index.ts  signals-panel.test.ts  signals-panel.ts
frontend/lib/components/status/: dbc-status.ts  index.ts  mdf4-status.ts
frontend/lib/components/toolbars/: index.ts  (+3 more)
frontend/lib/utils/: dlc-detection.test.ts  dlc-detection.ts  formatters.test.ts  formatters.ts  helpers.ts  index.ts
frontend/styles/: can-viewer.css
icons/: generate_icons.py
src/: config.rs  decode.rs  dto.rs  index.html  lib.rs  live_capture.rs  main.rs  main.ts  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: capture.rs  mdf.rs  mod.rs
src/commands/: capture.rs  dbc.rs  filter.rs  init.rs  mdf.rs  mod.rs
src/lib/: can-viewer.ts
tests/: frontend.rs  mdf4_integration.rs
