[package]
name = "can-viewer"
version = "0.1.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["can-viewer contributors"]
repository = "https://github.com/reneherrero/can-viewer"
homepage = "https://github.com/reneherrero/can-viewer"
rust-version = "1.85.0"
readme = "README.md"
description = "CAN Data Viewer with MDF4 and SocketCAN support"
keywords = ["can", "mdf4", "dbc", "automotive", "socketcan"]
categories = ["visualization", "embedded"]
include = [
    "src/**/*",
    "Cargo.toml",
    "tauri.conf.json",
    "build.rs",
    "icons/*",
    "dist/**/*",
    "capabilities/*",
    "README.md",
    "LICENSE-*",
    "LICENSING.md",
]

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
thiserror = "2"

# CAN support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"

# MDF4 parsing
mdf4-rs = "0.1.0-rc.1"

# DBC parsing
dbc-rs = { version = "0.1.3", features = ["std", "embedded-can"] }

# embedded-can for standard CAN types
embedded-can = "0.4"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
